# photo-enhance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_REVIEW.md  README.md  photo-auto-enhance-spec.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/photo_enhance/: __init__.py  auto_levels.py  cli.py  finishing.py  imageio_utils.py  nature.py  pipeline.py  presets.py  web.py  web_entry.py
src/photo_enhance/preset_data/: backlit_bird.json  bird_natural.json  cool_moody.json  cross_process.json  faded_vintage.json  feather_detail.json  golden_hour.json  high_contrast_bw.json  overcast.json  soft_portrait.json  teal_ember.json  warm_film.json  woodland.json
src/photo_enhance/templates/: index.html
tests/: test_auto_levels.py  test_cli_overwrite.py  test_finishing.py  test_imageio_utils.py  test_nature.py  test_packaged_wheel.py  test_pipeline.py  test_presets.py  test_web.py  test_web_entry.py
