[project]
name = "photo-enhance"
version = "0.1.0"
description = "Local classical-CV photo auto-enhancer with creative filter presets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "opencv-python>=4.10",
    "pillow>=10.4",
    "click>=8.1",
]

[project.optional-dependencies]
web = ["flask>=3.0"]

[dependency-groups]
dev = ["pytest>=8.0", "flask>=3.0"]

[project.scripts]
photo-enhance = "photo_enhance.cli:main"
photo-enhance-web = "photo_enhance.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_enhance"]
